added skills section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
                 </div>
             </div>
         </section>
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate autem in architecto quam impedit!</p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-description">Suscipit esse deleniti voluptatem, officia aspernatur iure incidunt consequatur accusamus, consequuntur neque facilis, nulla modi?</p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-description">Odit minima similique sunt ea ipsum assumenda aut repudiandae atque earum maiores. Sapiente, corrupti explicabo?</p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-description">Molestias deleniti unde minima suscipit cum, culpa, architecto aut debitis praesentium, repellat laborum necessitatibus! Commodi.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
