--- a/index.html
+++ b/index.html
@@ -58,26 +58,30 @@
             <h3 class="section-title">What I Do</h3>
             <div class="skills-container">
                 <div class="skill">
-                    <img src="" alt="">
-                    <p class="skill-title"></p>
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
                     <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptate autem in architecto quam impedit!</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p class="skill-title"></p>
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
                     <p class="skill-description">Suscipit esse deleniti voluptatem, officia aspernatur iure incidunt consequatur accusamus, consequuntur neque facilis, nulla modi?</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p class="skill-title"></p>
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongodb</p>
                     <p class="skill-description">Odit minima similique sunt ea ipsum assumenda aut repudiandae atque earum maiores. Sapiente, corrupti explicabo?</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p class="skill-title"></p>
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node JS</p>
                     <p class="skill-description">Molestias deleniti unde minima suscipit cum, culpa, architecto aut debitis praesentium, repellat laborum necessitatibus! Commodi.</p>
                 </div>
             </div>
+        </section>
+        <!-- Resume section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
         </section>
     </main>
     <footer>
