--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer portfolio</title>
-    <link rel="stylesheet" href="style/portfolio.css">
+    <script src="https://kit.fontawesome.com/c2fd669467.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body>
     <header class="header">
@@ -26,10 +27,11 @@
                 <h3 class="banner-sub-tittle">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fas fa-download"></i> Download CV</button>
+                <button class="btn-primary" id="contact-btn"><i class="fas fa-phone-alt"></i> Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
-        </div>
+        </div> 
     </header>
     <main>
         <section class="about">
@@ -56,6 +58,7 @@
         </section>
         <section class="what-i-do">
             <h3 class="section-title">What I Do</h3>
+            <p class="pera">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="skills-container">
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
@@ -131,7 +134,7 @@
                 </div>
             </div>
             <div class="resume-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fas fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
