--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary"><i class="fas fa-download"></i> Download CV</button>
-                <button class="btn-primary" id="contact-btn"><i class="fas fa-phone-alt"></i> Contact</button>
+                <button class="btn-primary" id="contact-btn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div> 
@@ -157,5 +157,6 @@
             </form>
         </div>
     </section>
+   
 </body>
 </html>
